--- a/GestionClinica/src/main/java/vista/Ventana.form
+++ b/GestionClinica/src/main/java/vista/Ventana.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="MainPanel" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="567" height="873"/>
+      <xy x="20" y="20" width="567" height="910"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -205,7 +205,7 @@
                   <grid row="19" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <text value="Enviar Paciente"/>
+                  <text value="Enviar"/>
                 </properties>
               </component>
             </children>
@@ -246,7 +246,7 @@
                   <grid row="23" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <text value="Enviar Medico"/>
+                  <text value="Enviar"/>
                 </properties>
               </component>
               <component id="54b95" class="javax.swing.JLabel" binding="NombreMedicoLabel">
@@ -412,7 +412,7 @@
                   <model>
                     <item value="NINGUNO"/>
                     <item value="MAGISTER"/>
-                    <item value="DOCTOR"/>
+                    <item value="DOCTORADO"/>
                   </model>
                 </properties>
               </component>
@@ -439,6 +439,140 @@
                   </grid>
                 </constraints>
                 <properties/>
+              </component>
+            </children>
+          </grid>
+          <grid id="fbddf" binding="PanelManejoPaciente" layout-manager="GridLayoutManager" row-count="11" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+            <margin top="0" left="0" bottom="0" right="0"/>
+            <constraints>
+              <tabbedpane title="Manejo de Pacientes"/>
+            </constraints>
+            <properties/>
+            <border type="none"/>
+            <children>
+              <component id="6f015" class="javax.swing.JLabel" binding="IngresarPacienteLabel">
+                <constraints>
+                  <grid row="0" column="0" row-span="1" col-span="3" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <text value="Elija el paciente que quiera ingresar"/>
+                </properties>
+              </component>
+              <component id="da184" class="javax.swing.JComboBox" binding="IngresarPacienteField">
+                <constraints>
+                  <grid row="2" column="0" row-span="1" col-span="3" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <model/>
+                </properties>
+              </component>
+              <component id="36cdf" class="javax.swing.JTextField" binding="IngresarPacienteBuscarField">
+                <constraints>
+                  <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                    <preferred-size width="150" height="-1"/>
+                  </grid>
+                </constraints>
+                <properties/>
+              </component>
+              <component id="47b49" class="javax.swing.JButton" binding="IngresarPacienteBuscarBoton">
+                <constraints>
+                  <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <text value="Buscar"/>
+                </properties>
+              </component>
+              <component id="8cd31" class="javax.swing.JLabel" binding="AtenderPacienteLabel">
+                <constraints>
+                  <grid row="5" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <text value="Elija el paciente a atender y el medico correspondiente"/>
+                </properties>
+              </component>
+              <component id="5da5c" class="javax.swing.JComboBox" binding="AtenderPacienteField">
+                <constraints>
+                  <grid row="7" column="0" row-span="1" col-span="3" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties/>
+              </component>
+              <component id="f52ac" class="javax.swing.JComboBox" binding="AtenderMedicoField">
+                <constraints>
+                  <grid row="9" column="0" row-span="1" col-span="3" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties/>
+              </component>
+              <component id="41bcf" class="javax.swing.JTextField" binding="AtenderPacienteBuscarField">
+                <constraints>
+                  <grid row="6" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                    <preferred-size width="150" height="-1"/>
+                  </grid>
+                </constraints>
+                <properties/>
+              </component>
+              <component id="71fdb" class="javax.swing.JTextField" binding="AtenderMedicoBuscarField">
+                <constraints>
+                  <grid row="8" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                    <preferred-size width="150" height="-1"/>
+                  </grid>
+                </constraints>
+                <properties/>
+              </component>
+              <component id="7161d" class="javax.swing.JButton" binding="AtenderPacienteBuscarBoton">
+                <constraints>
+                  <grid row="6" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <text value="Buscar"/>
+                </properties>
+              </component>
+              <component id="ba538" class="javax.swing.JButton" binding="AtenderMedicoBuscarBoton">
+                <constraints>
+                  <grid row="8" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <text value="Buscar"/>
+                </properties>
+              </component>
+              <component id="9b4f8" class="javax.swing.JButton" binding="AtenderPacienteBoton">
+                <constraints>
+                  <grid row="10" column="0" row-span="1" col-span="3" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <text value="Atender Paciente"/>
+                </properties>
+              </component>
+              <component id="22295" class="javax.swing.JButton" binding="IngresarPacienteBoton">
+                <constraints>
+                  <grid row="3" column="0" row-span="2" col-span="3" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <text value="Ingresar Paciente"/>
+                </properties>
+              </component>
+              <component id="cb972" class="javax.swing.JLabel" binding="AtenderPacienteBuscarLabel">
+                <constraints>
+                  <grid row="6" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <text value="Paciente:"/>
+                </properties>
+              </component>
+              <component id="231d" class="javax.swing.JLabel" binding="IngresarPacienteBuscarLabel">
+                <constraints>
+                  <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <text value="Paciente:"/>
+                </properties>
+              </component>
+              <component id="e686f" class="javax.swing.JLabel" binding="AtenderMedicoBuscarLabel">
+                <constraints>
+                  <grid row="8" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <text value="Medico:"/>
+                </properties>
               </component>
             </children>
           </grid>
