--- a/GestionClinica/src/main/java/vista/Ventana.form
+++ b/GestionClinica/src/main/java/vista/Ventana.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="MainPanel" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="true" hgap="-1" vgap="-1">
     <margin top="0" left="200" bottom="0" right="200"/>
     <constraints>
-      <xy x="20" y="20" width="1044" height="911"/>
+      <xy x="20" y="20" width="1232" height="911"/>
     </constraints>
     <properties>
       <alignmentX value="0.5"/>
@@ -1112,7 +1112,7 @@
               </tabbedpane>
             </children>
           </grid>
-          <grid id="64923" binding="PanelAmbulancia" layout-manager="GridLayoutManager" row-count="3" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+          <grid id="64923" binding="PanelAmbulancia" layout-manager="GridLayoutManager" row-count="5" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="100" bottom="0" right="100"/>
             <constraints>
               <tabbedpane title="Ambulancia"/>
@@ -1122,7 +1122,7 @@
             <children>
               <component id="4ee93" class="javax.swing.JTextArea" binding="EstadoText">
                 <constraints>
-                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="0" indent="0" use-parent-layout="false">
+                  <grid row="0" column="0" row-span="1" col-span="2" vsize-policy="6" hsize-policy="6" anchor="0" fill="0" indent="0" use-parent-layout="false">
                     <preferred-size width="536" height="50"/>
                   </grid>
                 </constraints>
@@ -1135,16 +1135,9 @@
                   <tabSize value="8"/>
                 </properties>
               </component>
-              <vspacer id="1d81d">
+              <component id="b25e6" class="javax.swing.JButton" binding="AmbulanciaAsociadosBoton">
                 <constraints>
-                  <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false">
-                    <preferred-size width="536" height="14"/>
-                  </grid>
-                </constraints>
-              </vspacer>
-              <component id="b25e6" class="javax.swing.JButton" binding="AmbulanciaBoton">
-                <constraints>
-                  <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false">
+                  <grid row="1" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false">
                     <preferred-size width="100" height="50"/>
                   </grid>
                 </constraints>
@@ -1152,7 +1145,50 @@
                   <font size="14"/>
                   <horizontalTextPosition value="0"/>
                   <margin top="0" left="0" bottom="0" right="0"/>
-                  <text value="Botón"/>
+                  <text value="Confirmar Asociados"/>
+                </properties>
+              </component>
+              <scrollpane id="a28d7" binding="AmbulanciaAsociadosScrollPane">
+                <constraints>
+                  <grid row="4" column="0" row-span="1" col-span="2" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <horizontalScrollBarPolicy value="30"/>
+                </properties>
+                <border type="none"/>
+                <children/>
+              </scrollpane>
+              <component id="96783" class="javax.swing.JButton" binding="AmbulanciaEmpezarBoton">
+                <constraints>
+                  <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="4" fill="0" indent="0" use-parent-layout="false">
+                    <preferred-size width="100" height="50"/>
+                  </grid>
+                </constraints>
+                <properties>
+                  <font size="14"/>
+                  <text value="Empezar Simulación"/>
+                </properties>
+              </component>
+              <component id="88765" class="javax.swing.JButton" binding="AmbulanciaPararBoton">
+                <constraints>
+                  <grid row="3" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false">
+                    <preferred-size width="100" height="50"/>
+                  </grid>
+                </constraints>
+                <properties>
+                  <font size="14"/>
+                  <text value="Parar Simulación"/>
+                </properties>
+              </component>
+              <component id="286d4" class="javax.swing.JButton" binding="AmbulanciaVolverBoton">
+                <constraints>
+                  <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false">
+                    <preferred-size width="50" height="50"/>
+                  </grid>
+                </constraints>
+                <properties>
+                  <font size="14"/>
+                  <text value="Volver Atras"/>
                 </properties>
               </component>
             </children>
