--- a/GestionClinica/src/main/java/vista/Ventana.form
+++ b/GestionClinica/src/main/java/vista/Ventana.form
@@ -1112,85 +1112,106 @@
               </tabbedpane>
             </children>
           </grid>
-          <grid id="64923" binding="PanelAmbulancia" layout-manager="GridLayoutManager" row-count="5" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-            <margin top="0" left="100" bottom="0" right="100"/>
+          <grid id="f4195" binding="PanelAmbulancia" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+            <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
               <tabbedpane title="Ambulancia"/>
             </constraints>
             <properties/>
             <border type="none"/>
             <children>
-              <component id="4ee93" class="javax.swing.JTextArea" binding="EstadoText">
+              <tabbedpane id="46100" binding="PanelAmbulanciaTabbeado">
                 <constraints>
-                  <grid row="0" column="0" row-span="1" col-span="2" vsize-policy="6" hsize-policy="6" anchor="0" fill="0" indent="0" use-parent-layout="false">
-                    <preferred-size width="536" height="50"/>
+                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
+                    <preferred-size width="200" height="200"/>
                   </grid>
                 </constraints>
-                <properties>
-                  <alignmentX value="0.3"/>
-                  <editable value="false"/>
-                  <font size="16"/>
-                  <lineWrap value="false"/>
-                  <margin top="100" left="100" bottom="100" right="100"/>
-                  <tabSize value="8"/>
-                </properties>
-              </component>
-              <component id="b25e6" class="javax.swing.JButton" binding="AmbulanciaAsociadosBoton">
-                <constraints>
-                  <grid row="1" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false">
-                    <preferred-size width="100" height="50"/>
-                  </grid>
-                </constraints>
-                <properties>
-                  <font size="14"/>
-                  <horizontalTextPosition value="0"/>
-                  <margin top="0" left="0" bottom="0" right="0"/>
-                  <text value="Confirmar Asociados"/>
-                </properties>
-              </component>
-              <scrollpane id="a28d7" binding="AmbulanciaAsociadosScrollPane">
-                <constraints>
-                  <grid row="4" column="0" row-span="1" col-span="2" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
-                </constraints>
-                <properties>
-                  <horizontalScrollBarPolicy value="30"/>
-                </properties>
+                <properties/>
                 <border type="none"/>
-                <children/>
-              </scrollpane>
-              <component id="96783" class="javax.swing.JButton" binding="AmbulanciaEmpezarBoton">
-                <constraints>
-                  <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="4" fill="0" indent="0" use-parent-layout="false">
-                    <preferred-size width="100" height="50"/>
+                <children>
+                  <grid id="756a1" binding="PanelAmbulanciaSimulacion" layout-manager="GridLayoutManager" row-count="5" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+                    <margin top="0" left="100" bottom="0" right="100"/>
+                    <constraints>
+                      <tabbedpane title="Simulacion"/>
+                    </constraints>
+                    <properties/>
+                    <border type="none"/>
+                    <children>
+                      <component id="ce81b" class="javax.swing.JTextArea" binding="EstadoText">
+                        <constraints>
+                          <grid row="0" column="0" row-span="1" col-span="2" vsize-policy="6" hsize-policy="6" anchor="0" fill="0" indent="0" use-parent-layout="false">
+                            <preferred-size width="536" height="50"/>
+                          </grid>
+                        </constraints>
+                        <properties>
+                          <alignmentX value="0.3"/>
+                          <editable value="false"/>
+                          <font size="16"/>
+                          <lineWrap value="false"/>
+                          <margin top="100" left="100" bottom="100" right="100"/>
+                          <tabSize value="8"/>
+                        </properties>
+                      </component>
+                      <component id="aec50" class="javax.swing.JButton" binding="AmbulanciaAsociadosBoton">
+                        <constraints>
+                          <grid row="1" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false">
+                            <preferred-size width="100" height="50"/>
+                          </grid>
+                        </constraints>
+                        <properties>
+                          <font size="14"/>
+                          <horizontalTextPosition value="0"/>
+                          <margin top="0" left="0" bottom="0" right="0"/>
+                          <text value="Confirmar Asociados"/>
+                        </properties>
+                      </component>
+                      <scrollpane id="433a8" binding="AmbulanciaAsociadosScrollPane">
+                        <constraints>
+                          <grid row="4" column="0" row-span="1" col-span="2" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                        </constraints>
+                        <properties>
+                          <horizontalScrollBarPolicy value="30"/>
+                        </properties>
+                        <border type="none"/>
+                        <children/>
+                      </scrollpane>
+                      <component id="496d4" class="javax.swing.JButton" binding="AmbulanciaEmpezarBoton">
+                        <constraints>
+                          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="4" fill="0" indent="0" use-parent-layout="false">
+                            <preferred-size width="100" height="50"/>
+                          </grid>
+                        </constraints>
+                        <properties>
+                          <font size="14"/>
+                          <text value="Empezar Simulación"/>
+                        </properties>
+                      </component>
+                      <component id="1d485" class="javax.swing.JButton" binding="AmbulanciaPararBoton">
+                        <constraints>
+                          <grid row="3" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false">
+                            <preferred-size width="100" height="50"/>
+                          </grid>
+                        </constraints>
+                        <properties>
+                          <font size="14"/>
+                          <text value="Parar Simulación"/>
+                        </properties>
+                      </component>
+                      <component id="e8eda" class="javax.swing.JButton" binding="AmbulanciaVolverBoton">
+                        <constraints>
+                          <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false">
+                            <preferred-size width="50" height="50"/>
+                          </grid>
+                        </constraints>
+                        <properties>
+                          <font size="14"/>
+                          <text value="Volver Atras"/>
+                        </properties>
+                      </component>
+                    </children>
                   </grid>
-                </constraints>
-                <properties>
-                  <font size="14"/>
-                  <text value="Empezar Simulación"/>
-                </properties>
-              </component>
-              <component id="88765" class="javax.swing.JButton" binding="AmbulanciaPararBoton">
-                <constraints>
-                  <grid row="3" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false">
-                    <preferred-size width="100" height="50"/>
-                  </grid>
-                </constraints>
-                <properties>
-                  <font size="14"/>
-                  <text value="Parar Simulación"/>
-                </properties>
-              </component>
-              <component id="286d4" class="javax.swing.JButton" binding="AmbulanciaVolverBoton">
-                <constraints>
-                  <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false">
-                    <preferred-size width="50" height="50"/>
-                  </grid>
-                </constraints>
-                <properties>
-                  <font size="14"/>
-                  <text value="Volver Atras"/>
-                </properties>
-              </component>
+                </children>
+              </tabbedpane>
             </children>
           </grid>
         </children>
