--- a/GestionClinica/src/main/java/vista/Ventana.form
+++ b/GestionClinica/src/main/java/vista/Ventana.form
@@ -1186,17 +1186,6 @@
                           <text value="Empezar Simulación"/>
                         </properties>
                       </component>
-                      <component id="1d485" class="javax.swing.JButton" binding="AmbulanciaPararBoton">
-                        <constraints>
-                          <grid row="3" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false">
-                            <preferred-size width="100" height="50"/>
-                          </grid>
-                        </constraints>
-                        <properties>
-                          <font size="14"/>
-                          <text value="Parar Simulación"/>
-                        </properties>
-                      </component>
                       <component id="e8eda" class="javax.swing.JButton" binding="AmbulanciaVolverBoton">
                         <constraints>
                           <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false">
@@ -1208,10 +1197,53 @@
                           <text value="Volver Atras"/>
                         </properties>
                       </component>
+                      <component id="1d485" class="javax.swing.JButton" binding="AmbulanciaPararBoton">
+                        <constraints>
+                          <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="4" fill="0" indent="0" use-parent-layout="false">
+                            <preferred-size width="100" height="50"/>
+                          </grid>
+                        </constraints>
+                        <properties>
+                          <font size="14"/>
+                          <text value="Parar Simulación"/>
+                        </properties>
+                      </component>
+                      <component id="114a7" class="javax.swing.JButton" binding="AmbulanciaTallerBoton">
+                        <constraints>
+                          <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="2" indent="0" use-parent-layout="false">
+                            <preferred-size width="100" height="50"/>
+                          </grid>
+                        </constraints>
+                        <properties>
+                          <font size="14"/>
+                          <text value="Enviar a Taller"/>
+                        </properties>
+                      </component>
                     </children>
                   </grid>
                 </children>
               </tabbedpane>
+            </children>
+          </grid>
+          <grid id="9027f" binding="PanelCrearTablas" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+            <margin top="0" left="0" bottom="0" right="0"/>
+            <constraints>
+              <tabbedpane title="Creacion de Tablas"/>
+            </constraints>
+            <properties/>
+            <border type="none"/>
+            <children>
+              <component id="6ea9a" class="javax.swing.JButton" binding="CrearTablasBoton">
+                <constraints>
+                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false">
+                    <preferred-size width="200" height="100"/>
+                  </grid>
+                </constraints>
+                <properties>
+                  <font size="20"/>
+                  <text value="Crear Tablas"/>
+                </properties>
+              </component>
             </children>
           </grid>
         </children>
